--- a/Расширение_Нетология2/src/Catalogs/ТП_КонтактныеЛица/Forms/ФормаЭлемента/Form.form
+++ b/Расширение_Нетология2/src/Catalogs/ТП_КонтактныеЛица/Forms/ФормаЭлемента/Form.form
@@ -372,7 +372,7 @@
     <name>Объект</name>
     <id>1</id>
     <valueType>
-      <types>CatalogObject.Т_КонтактныеЛица</types>
+      <types>CatalogObject.ТП_КонтактныеЛица</types>
     </valueType>
     <view>
       <common>true</common>
