--- a/onec-mid-base-11/src/Documents/РеализацияТоваровУслуг/Forms/ФормаДокумента/Form.form
+++ b/onec-mid-base-11/src/Documents/РеализацияТоваровУслуг/Forms/ФормаДокумента/Form.form
@@ -1440,6 +1440,23 @@
     <main>true</main>
     <savedData>true</savedData>
   </attributes>
+  <attributes>
+    <name>КонтакныеЛица</name>
+    <title>
+      <key>ru</key>
+      <value>Контакные лица</value>
+    </title>
+    <id>2</id>
+    <valueType>
+      <types>CatalogRef.ТП_КонтактныеЛица</types>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
   <commandInterface>
     <navigationPanel/>
     <commandBar/>
